<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmergencyContactsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollbarSize="7dp"
        android:scrollbarStyle="insideOverlay"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout04"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center">


            <TextView
                android:id="@+id/textView89"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/emergency_contact_1"
                android:textColor="#C2002F"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView89" />


            <EditText
                android:id="@+id/eCon1Name"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/contact_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/spinner1"
                app:layout_constraintStart_toStartOf="@+id/spinner1"
                app:layout_constraintTop_toBottomOf="@+id/spinner1" />

            <EditText
                android:id="@+id/eCon1Num"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/contact_number"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eCon1Name" />


            <TextView
                android:id="@+id/textView90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="185dp"
                android:text="@string/emergency_contact_2"
                android:textColor="#C2002F"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/textView89"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView89"
                app:layout_constraintTop_toBottomOf="@+id/textView89" />


            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/eCon1Num"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/eCon1Num"
                app:layout_constraintTop_toBottomOf="@+id/textView90" />

            <EditText
                android:id="@+id/eCon2Name"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/contact_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/spinner2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/spinner2"
                app:layout_constraintTop_toBottomOf="@+id/spinner2" />


            <EditText
                android:id="@+id/econ2Num"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/contact_number"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="@+id/eCon2Name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/eCon2Name"
                app:layout_constraintTop_toBottomOf="@+id/eCon2Name" />


            <TextView
                android:id="@+id/textView91"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="185dp"
                android:text="@string/emergency_contact_3"
                android:textColor="#C2002F"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/textView90"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView90"
                app:layout_constraintTop_toBottomOf="@+id/textView90" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="@+id/econ2Num"
                app:layout_constraintStart_toStartOf="@+id/econ2Num"
                app:layout_constraintTop_toBottomOf="@+id/textView91" />


            <EditText
                android:id="@+id/eCon3Name"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/contact_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/spinner3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/spinner3"
                app:layout_constraintTop_toBottomOf="@+id/spinner3" />


            <EditText
                android:id="@+id/eCon3Num"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/contact_number"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="@+id/eCon3Name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/eCon3Name"
                app:layout_constraintTop_toBottomOf="@+id/eCon3Name" />

            <Button
                android:id="@+id/eConSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:text="@string/save"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eCon3Num" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:text="@string/version"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>