<resources>
    <string name="app_name">Helping Hands</string>
    <string name="version">helping hands (v_1.1)</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_requests">Requests</string>
    <string name="title_profile">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fetching_data_from_database">Fetching data from the database…</string>
    <string name="incoming_request">Incoming Request</string>
    <string name="someone_within_your_area_needs_your_help">Someone within your area needs your help</string>
    <string name="help_is_coming">Help is coming</string>
...
    <string name="update_profile">Update profile</string>
    <string name="emergency_contact_1">Emergency Contact 1 :</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="emergency_contact_2">Emergency Contact 2 :</string>
    <string name="emergency_contact_3">Emergency Contact 3 :</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="welcome_to_helping_hands">Welcome to Helping Hands</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_nsignup">Don\'t have An account?\nSignup</string>
    <string name="register_yourself_by_providing_required_details_below">Register yourself by providing required details below</string>
...
